--- a/public/assets/css/nosotros.css
+++ b/public/assets/css/nosotros.css
@@ -321,7 +321,7 @@ body {
         z-index: 1000;
         background: #fca6f7;
         backdrop-filter: blur(5px);
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);   /*#c71ab3;*/
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);  
         padding: 0;
         height: auto;
     }
@@ -629,4 +629,66 @@ body {
         top: -5px !important;
     }
         
+}
+
+@media (max-width: 360px) {
+    
+    .dropdown-toggle .bx-chevron-down {
+        font-size: 18px !important;
+        vertical-align: middle !important;
+        position: relative !important;
+        top: -1px !important; 
+        margin-left: -3px !important;
+        display: inline-block !important;
+    }
+
+    .dropdown-menu {
+        min-width: 180px;
+        left: -10px !important; 
+        margin-top: -10px !important; 
+        transform: none;
+        margin-left: 0;
+    }
+    
+    .dropdown-menu li a {
+        padding: 8px 12px;
+        font-size: 12px;
+    }
+    
+    .dropdown-submenu .dropdown-menu {
+        left: 97% !important; 
+        top: 0;
+        min-width: 180px;
+        margin-left: 5px !important; 
+    }
+
+    .nav-phrase {
+        font-size: 3.5vw;
+        margin: 5px auto 0 auto;
+        padding: 0 10px;
+    }
+
+    .nav-menu ul {
+        gap: 2px; 
+    }
+    
+    .nav-menu ul li .link {
+        margin: 0 8px; 
+        font-size: 13px;
+        padding-bottom: 8px;
+    }
+
+    .nav-search-container {
+        width: 200px;
+        margin: 5px 15px;
+    }
+
+    .dropdown-menu {
+        min-width: 160px;
+    }
+    
+    .dropdown-menu li a {
+        padding: 8px 12px;
+        font-size: 12px;
+    }
 }
