--- a/public/admin-panel/panel/css/admin.css
+++ b/public/admin-panel/panel/css/admin.css
@@ -503,6 +503,19 @@ button:hover {
   margin-bottom: 0.5rem;
 }
 
+.info-libros {
+  font-size: 0.75rem;
+  font-weight: 600;
+  color: black;
+  background-color: rgb(154, 187, 233);
+  padding: 5px 12px;
+  border-radius: 999px;
+  margin-top: 12px;
+  margin-bottom: 10px;
+  display: inline-block;
+}
+
+
 .loading {
   display: flex;
   align-items: center;
