--- a/public/assets/css/nosotros.css
+++ b/public/assets/css/nosotros.css
@@ -691,4 +691,8 @@ body {
         padding: 8px 12px;
         font-size: 12px;
     }
+
+    .box5 {
+        background-position: center 25%;
+    }
 }
