--- a/public/assets/css/libros_style.css
+++ b/public/assets/css/libros_style.css
@@ -1065,7 +1065,8 @@ body {
         flex-direction: column;
         align-items: center;
         text-align: center;
-        padding: 12px 0;
+        padding: 6px 0;
+        gap: 20px;
     }
 
     .nav-logo img {
@@ -1094,27 +1095,24 @@ body {
     }
 
     .nav-phrase {
-        font-size: 22px;
         order:1;
-        line-height: 1.2;
-        margin-top: 15px;
-        margin-left: 100px;        
-        text-align: left;       
-        transform: none;
-        width: 100%;
-        color: #f8f8f8;
-        font-weight: bold;
+        font-size: 14px;          
+        text-align: center;       
+        margin-left: 0;          
+        transform: translateX(-19%);
     }
 
     .search-container {
         order: 2; 
-        margin-right:60px; 
-        width:300px;          
+        margin-left: -20px;   
+        margin-right: auto;
+        top: 20px;
+        width:250px;          
         max-width: 500px; 
     }
 
     .search-container:focus-within {
-        width: 450px; 
+        width: 300px; 
         }
 
     .search-bar {
@@ -1133,15 +1131,15 @@ body {
     .nav-menu ul {
         display: flex;
         justify-content: center;
-        gap: 25px; 
+        gap: 10px; 
         padding: 0;
         margin: 0;
         list-style: none;
     }
 
     .nav-menu ul li .link {
-        font-size: 22px;
-        margin: 0 25px;
+        font-size: 18px;
+        margin: 0;
         padding: 8px 0;
         font-weight: 500;
         color: #fff;
@@ -1153,6 +1151,10 @@ body {
         padding: 8px 6px;
     }
 
+    .nav-menu ul li .link::after {
+        bottom: 4px;  
+    }
+
     .nav-menu-btn,
     .nav-button {
         display: none;
@@ -1160,9 +1162,8 @@ body {
 
     .dropdown-menu {
         min-width: 100px;
-        left: 0;
-        margin-top: 0px;
-        margin-left: -9px;
+        left: -20px; /* negativo = más a la izquierda */
+        margin-left: 0;
         padding: 8px 0;
         transform: none;
         border-radius: 5px;
@@ -1188,7 +1189,7 @@ body {
         left: 100%;
         top: 0;
         min-width: 100px;
-        margin-left: -2px;
+        margin-left: 7px;
         transform: none;
     }
 
@@ -1395,23 +1396,30 @@ body {
     .zoom-lens, .zoom-preview {
         display: none;
     }
+
+    
     
 }
 
 @media (max-width: 576px) {
-   .nav-menu ul li .link {
-        font-size: 20px;
-        margin: 0 10px;
-        padding: 8px 0;
-        font-weight: 500;
-        color: #fff;
-        text-decoration: none;
-    } 
+   .nav-menu ul {
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: center;
+        gap: 2px;
+        padding: 0 0.5rem; 
+    }
+
+    .nav-menu ul li .link {
+        margin: 0;        
+        padding: 5px 6px; 
+        font-size: 16px;  
+    }
 
     .nav-center-phrase {
         width: 100%;
         margin: 10px 0 10px;
-        margin-right:10%;
+        margin-right:15%;
         padding: 0 10px;
         font-size: 1.7rem;
         text-align: center;
@@ -1421,16 +1429,7 @@ body {
     }
 
     .nav-phrase {
-        font-size: 22px;
-        order:1;
-        line-height: 1.2;
-        margin-right: 12%;
-        margin-left: 100px;        
-        text-align: left;       
-        transform: none;
-        width: 100%;
-        color: #f8f8f8;
-        font-weight: bold;
+        font-size: 14px;     /* un poco más pequeño */
     }
 
     .categoria-container {
@@ -1447,8 +1446,6 @@ body {
     }
   
 }
-
-
 
 @media (max-width: 360px) {
 
