--- a/public/assets/css/new.css
+++ b/public/assets/css/new.css
@@ -533,10 +533,18 @@ body {
         justify-content: center;
     }
 
+    .nav-menu ul {
+        display: flex;
+        justify-content: center;
+        gap: 5px;         
+        padding: 0;
+    }
+
+
     .nav-menu ul li .link {
-        font-size: 22px;
-        margin: 0 25px;
-       
+        font-size: 16px;     
+        margin: 0;           
+        padding: 6px 4px;  
     }
 
     .nav-phrase {
@@ -545,6 +553,10 @@ body {
         text-align: center;
         font-size: 22px;
         white-space: normal;
+    }
+
+    .nav-menu ul li .link::after {
+        bottom: 4px;  
     }
 
     .nav-center-phrase {
@@ -726,10 +738,13 @@ body {
         padding: 20px 16px -20px; 
     }
 
+    .nav-menu ul {
+        gap: 12px;
+    }
+
     .nav-menu ul li .link {
-        margin: 8px;          
-        padding: 5px 8px;
-        font-size: 20px;
+        font-size: 16px;
+        padding: 5px 2px;
         white-space: nowrap;
     }
 
