--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1098,6 +1098,25 @@ body {
         padding: 0 14px;
         font-size: 15px;       
     }
+
+    .initial-background {
+        position: relative;
+        top: 0;
+        left: 0;
+        transform: none;
+        min-height: 100svh;
+        width: 100%;
+        height: calc(100vh - 200px); 
+        z-index: 0;
+        display: block;
+    }
+
+    .initial-background img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        display: block;
+    }
 }
 
 @media (max-width: 576px) {
