--- a/public/assets/css/libros_style.css
+++ b/public/assets/css/libros_style.css
@@ -276,15 +276,16 @@ body {
 }
 
 .libro {
-    background: white;
+   background: white;
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     display: flex;
     flex-direction: column;
-    height: 100%;
-    min-height: auto;
+    padding: 10px;
+    height: auto;       
+    align-self: start;
 }
 
 .libro:hover {
@@ -302,7 +303,7 @@ body {
 
 .imagen-principal {
     width: 100%;
-    height: 250px;
+    height: 300px;
     object-fit: contain;
     transition: transform 0.3s;
     border-bottom: 1px solid #eee;
@@ -419,7 +420,6 @@ body {
     
 }
 
-
 .zoom-preview {
     position: absolute;
     right: 0;
@@ -432,7 +432,6 @@ body {
     pointer-events: none;
     transition: none;
 }
-
 
 .miniaturas-container {
     display: none;
@@ -466,11 +465,11 @@ body {
 }
 
 .libro-info {
-    padding: 15px;
-    flex-grow: 1; 
+    padding: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    gap: 6px;
+    flex-grow: 0
 }
 
 .libro h3 {
